feat/added generator and aduio instructions